<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center" android:id="@+id/view_three_b">

    <TextView
            android:text="@string/a_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:textSize="24sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="3"
            android:id="@+id/etAnumTtreeB" android:textAlignment="center" android:text="@string/def_b_a"/>
    <TextView
            android:text="@string/b_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:id="@+id/textView2" android:textSize="24sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="3"
            android:id="@+id/etBnumTtreeB" android:textAlignment="center" android:text="@string/def_b_b"/>
    <TextView
            android:text="@string/c_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:id="@+id/textView3" android:textSize="24sp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="3"
            android:id="@+id/etCnumTreeB" android:textAlignment="center" android:text="@string/def_b_c"/>
</LinearLayout>